@@ -1,3 +1,8 @@
+2000-12-20  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* actors.cc (Actor): Make 'follow()' more sensitive to NPC's being
+	left behind.
+
 2000-12-19  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
 	* configure.in: fixed --disable-long-long-warnings
 
